github: add a job to build rsdns with no rustfmt
By default `dtolnay/rust-toolchain@v1` uses the `minimal` rustup profile
for toolchain installation. However, seems like Actions bring some
pre-cached image with rustfmt installed. So this commit removes rustfmt
explicitly.

This commit tests the fix for https://github.com/r-bk/rsdns/issues/3.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,35 @@ jobs:
           RUSTDOCFLAGS: "--cfg docsrs"
         run: cargo doc --all-features --no-deps
 
+  no-rustfmt:
+    runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: --deny warnings
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: stable
+      - name: remove rustfmt
+        run: |
+          if which rustfmt; then
+            rm $(which rustfmt)
+            echo "remove-rustfmt: OK"
+          fi
+          if which rustfmt; then
+            echo "remove-rustfmt: VERIFY ERR"
+            exit 1
+          fi
+        shell: bash
+      - name: build with minimal toolchain
+        run: cargo build --all-features
+
+      - name: test with minimal toolchain
+        run: cargo build --all-features
+
+      - name: check with minimal toolchain
+        run: cargo check --all-features
+
   fuzz:
     runs-on: ubuntu-latest
     steps:
