--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ thiserror = "1.0.26"
 arrayvec = "0.7.1"
 rand = "0.8.4"
 cfg-if = "1.0.0"
-tokio = { version = "1", optional = true, default_features = false, features = [
+tokio = { version = "1", optional = true, default-features = false, features = [
     "rt",
     "net",
     "time",
