github: change the CI push triggers
Now that I move to use GH PRs there is no need to build every branch.
This commit changes the selection of built branches to `master` and
those ending with `_ci` suffix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: ci
 
 on:
   push:
-    branches-ignore:
-      - "**-wip"
+    branches:
+      - "master"
+      - "**_ci"
   pull_request:
   schedule:
     - cron: "0 1 * * 0"
